--- a/index.css
+++ b/index.css
@@ -6,6 +6,9 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .item {
