--- a/index.css
+++ b/index.css
@@ -38,6 +38,6 @@ body {
   .item canvas{
     width: 100%;
     height: 100%;
-    background-color:aliceblue;
+    background-color:white;
     object-fit: contain; /* Para ajustar a imagem ao contêiner mantendo a proporção */
 }
