--- a/index.css
+++ b/index.css
@@ -2,13 +2,25 @@ body {
     background: rgb(241,243,247);
 }
 
+#core{
+  width: 1300px;
+  display: block;
+  justify-content: space-between;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #mainDiv {
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    width: 80%;
-    margin-left: auto;
-    margin-right: auto;
+}
+
+#divHistogram {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 1260px;
+  background-color:white;
 }
 
 .item {
@@ -16,10 +28,8 @@ body {
     flex: 1;
     text-align: center;
     padding: 10px;
-    margin-top: 10px;
-    margin-left: 20px;
-    margin-right: 20px;
-    width: 600px; /* Defina a largura do contêiner pai */
+    margin: 10px;
+    width: auto; /* Defina a largura do contêiner pai */
     height: auto; /* Defina a altura do contêiner pai */
     overflow: hidden; /* Para garantir que a imagem não ultrapasse o contêiner */
     border-style: solid;
